# goph547-w2026-lab01-stSP

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: anomaly_data.mat
examples/: driver_multi_mass.py  driver_single_mass.py
src/goph547lab01/: generating_masses.py  gravity.py
tests/: test_gravity_functions.py
